Mark PR - Action. (#4)
* neoclassical font and guide to symbols

* reorg

* x

* x

* x

* x

* x

* x

* x

* md

* x

* x

* md

* x

* md

* x

* md

* md

* md

* md

* md

* md

* md

* md

* md

* gluons and color charge

* oblate spheroid

* md

* x

* oblate

* gr

* org

* md

* gpt-5 review

* gpt-5

* newton-cartan

* transpose

* tx/rx

* units

* using causal langauge

* ai driving

* spatial arclength is a cool concept

* wordy

* causal

* blahblah

* shells !!!

* theory

* okay

* wow

* ok

* theory

* wrangling

* xs

* symbols

* wow

* draft

* md

* update

* changelog

* x

* math

* math

* math style

* mathing

* mathing to the nth degree

* delay

* causal

* delay

* walkthru

* walkthru

* llm is earning extra credit

* a+

* Add walkthrough for Action and Interaction (Step 2: Units and constants)

* x

* streaming

* Refine language in Action and Interaction walkthrough for clarity and consistency

* x

* Update .gitignore and refine Action and Interaction walkthrough for clarity

* action

* action

* action

* Add detailed walkthroughs and examples for the action law

- Introduced Step 10: Numerical recipe and stability, outlining event-aware integration and stability tips.
- Added Step 3: Causal set and delay geometry, explaining root conditions and local uniqueness.
- Created Step 4: Master equation of motion, detailing acceleration contributions and superposition.
- Included Step 5: Receiver velocity and work, focusing on instantaneous effects and energy transfer.
- Established Step 6: Well-posedness and regularization, discussing impulse dynamics and mollified shells.
- Developed Step 7: Superposition and locality, emphasizing the dominance of nearby sources.
- Added Step 8: Self-interaction switch, explaining conditions for self-interaction and its stabilizing effects.
- Created Step 9: Informational ambiguity, detailing the limitations of information at the receiver.
- Introduced Chapter 00.2: Action Exposition and Idealized Exa

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -36,6 +36,11 @@ $$
 $$
 h = dx^2 + dy^2 + dz^2, \quad h_{ij} = \delta_{ij}, \quad i,j \in \{1,2,3\}.
 $$
+Here $\delta_{ij}$ is the Kronecker delta (the 3×3 identity). It implements the standard Euclidean dot product and norm:
+$u\!\cdot\!v = h_{ij}\,u^i v^j = \delta_{ij}\,u^i v^j$ and $\|v\|^2 = h_{ij}\,v^i v^j$.
+Index raising/lowering is trivial with $h^{ij}=\delta^{ij}$: $v_i=h_{ij}v^j=\delta_{ij}v^j$ and $v^i=h^{ij}v_j=\delta^{ij}v_j$.
+In Cartesian coordinates all Christoffel symbols vanish ($\Gamma^{i}{}_{jk}=0$), so covariant derivatives reduce to partial derivatives and geodesics are straight lines. The Riemann curvature tensor is identically zero (flat space). The spatial volume element is $\sqrt{\det h}\,d^3x = dx\,dy\,dz$ and the Laplacian is $\Delta = h^{ij}\partial_i\partial_j = \partial_x^2+\partial_y^2+\partial_z^2$.
+In curvilinear coordinates on $\Sigma_t$ (e.g., spherical), the same flat geometry is represented by nontrivial components, e.g., $h_{ij}=\mathrm{diag}(1,\,r^2,\,r^2\sin^2\theta)$ in $(r,\theta,\phi)$; the simple $\delta_{ij}$ form is specific to Cartesian frames.
 - No non-degenerate 4D metric on $\mathcal{M}$. The pair $(\tau, h)$ defines the background geometry.
 - A flat, torsion-free connection $\nabla$ compatible with the structure,
 $$
@@ -60,7 +65,7 @@ There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations a
 $L[x; t_1, t_2] = \int_{t_1}^{t_2} \|v(t)\|\, dt$.
 
 ### 3a. Causality and propagation
-We adopt an absolute causal order: event A precedes event B iff $t_A < t_B$. Influences propagate via spherical wavefronts at a finite speed $v$; define $c_{\max} \equiv v$ as the maximal signal speed in the model. An event $(t_0, x_0)$ can influence points $(t, x)$ only if $t > t_0$ and $\|x - x_0\| = v\,(t - t_0)$. There are no advanced or instantaneous interactions (retarded-only). The background geometry provides no additional causal cones; causality is entirely determined by this propagation rule.
+We adopt an absolute causal order: event A precedes event B iff $t_A < t_B$. Influences propagate via spherical wavefronts at a finite speed $v$; define $c_{\max} \equiv v$ as the maximal signal speed in the model. An event $(t_0, x_0)$ can influence points $(t, x)$ only if $t > t_0$ and $\|x - x_0\| = v\,(t - t_0)$. There are no advanced or instantaneous interactions (delayed-only). The background geometry provides no additional causal cones; causality is entirely determined by this propagation rule.
 
 ---
 
