--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -26,13 +26,13 @@ $$
 with durations measured separately as $\Delta t = t_2 - t_1$. We do not define any 4D arc length mixing time and space.
 
 ### **Sphere Stream**
-As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
+As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding spherical shells (wavefronts). The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
 
-Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = (t_{obs} - t_0)$.
+Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = v\,(t_{obs} - t_0)$.
 
 The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these spheres:
 $$
-\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = (t_{obs} - t_0) \}
+\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v\,(t_{obs} - t_0) \}
 $$
 This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Under mild conditions on the historical worldline (e.g., unbounded excursion over time), the union of expanding wavefronts can densely cover space within bounded regions; in general, the coverage depends on the geometry of $\mathbf{s}_a(t)$.
 
@@ -41,22 +41,22 @@ In plain language: imagine the Architrino dropping tiny “pings” at every mom
 ### **Causal Intersection Times**
 For a receiver $a$ at time $t$ and a source particle $j$, define the causal set of emission times
 $$
-\mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
+\mathcal{C}_j(t) = \big\{\, t_0 < t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
 $$
-When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|\ge v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
+When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|> v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
 
 Plain language: you feel a push now from source $j$ only if one of its earlier spherical wavefronts has had exactly enough time to reach you; the equation says “distance traveled by the sphere equals the time since it was emitted, times $v$.”
 
 ### **Conventions at Singular Cases**
 - No instantaneous self-force: the $\tau = t - t_0 = 0$ emission does not produce an immediate self-acceleration (we take $H(0)=0$ in the emission formula).
-- Center hits (exactly $r=0$ with $\tau>0$) are symmetric and produce no net directional acceleration; this case has measure zero and can be handled via standard regularization (see Action and Interaction). Intuitively, striking the exact center gives no preferred direction, so any would-be push cancels out.
+- No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
-Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle.
+Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle. In practice, every Architrino is always “riding” the superposed sphere streams of all other Architrinos—and, when kinematics permit (whenever $|\mathbf{v}|>v$ at some emission times), of its own past emissions. The complexity is manageable by treating each causal intersection separately and weighting by distance: each hit contributes a purely radial push scaled by $1/r^2$ (with emitter-side speed modulations), so nearby sources dominate while far ones fade.
 
 ### **The Stationary Architrino and Absolute Space**
 A special and fundamental case arises when an Architrino is stationary with respect to absolute space, i.e., its velocity $\mathbf{v}_a = 0$.
 
--   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position $\mathbf{s}_{fixed}$, its sphere stream consists of a continuous family of perfectly concentric spheres. While each individual sphere expands, the overall geometric form of the stream is static and time-invariant.
+-   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position $\mathbf{s}_{fixed}$, its sphere stream consists of a continuous family of perfectly concentric spherical shells. While each individual shell expands, the overall geometric form of the stream is static and time-invariant.
 
 -   **Bridge to Absolute Space:** This state is physically distinguishable from any state of non-zero velocity. An Architrino in motion ($\mathbf{v}_a \neq 0$) generates a non-concentric sphere stream whose pattern is dynamic. The perfect symmetry of the stationary stream provides a unique, observable reference frame. Therefore, the state of being at rest in absolute space is not relative but absolute, providing a direct mathematical and physical bridge to the underlying structure of absolute space.
 
