--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -1,15 +1,15 @@
 # W and Z Bosons as Transient Electroweak Meta-Assemblies
 
-We work in units with field speed v = 1 unless stated otherwise. ε = |e|/6 is the unit charge magnitude.
+We work in units with field speed $v=1$ unless stated otherwise. $\epsilon = |e|/6$ is the unit charge magnitude.
 
 ## 1) Concept: Localized Recoupling Bundles
 
-In this framework, W± and Z⁰ are not fundamental particles; they are short-lived, localized meta-assemblies—corridors of coupled, high-intensity axial field that mediate discrete reconfigurations of personality architrinos between Noether-core assemblies.
+In this framework, W± and Z⁰ are not fundamental particles; they are short-lived, localized meta-assemblies—corridors of coupled, high-intensity axial field that mediate discrete reconfigurations of personality architrinos between Noether Core assemblies.
 
 - Corridor geometry:
   - A W/Z bundle is a compact, phase-locked vortex corridor connecting two polar regions (within or between assemblies). It carries concentrated delayed, radial-only actions arranged to transport charge and/or angular momentum during a brief interval.
 - Lifetime and scale:
-  - Spatial extent ℓ is a few d₀ (the minimal binary radius); lifetime τ is short (impulsive on assembly timescales). The bundle typically propagates near v along its axis when emitted into open space, or remains tethered between sources during transfer.
+  - Spatial extent $\ell$ is a few $d_0$ (the minimal binary radius); lifetime $\tau$ is short (impulsive on assembly timescales). The bundle typically propagates near $v$ along its axis when emitted into open space, or remains tethered between sources during transfer.
 
 Plain language: W and Z are fleeting “thickened tubes” of push that briefly connect two poles to swap charge or spin before they fade.
 
@@ -18,14 +18,14 @@ Plain language: W and Z are fleeting “thickened tubes” of push that briefly 
 ## 2) Channels and Quantum Numbers
 
 - W± (charged transfer):
-  - Function: transports net charge ±6ε between assemblies by reconfiguring which cores/personality architrinos carry those ε-units.
-  - Charge: q_W = ±6ε (matches ±e when measured in electron units).
+  - Function: transports net charge $\pm 6\epsilon$ between assemblies by reconfiguring which cores/personality architrinos carry those $\epsilon$-units.
+  - Charge: $q_W = \pm 6\epsilon$ (matches $\pm e$ when measured in electron units).
   - Spin: effectively spin-1 from the axial corridor structure and its transverse phase.
   - Interpretation: a localized transfer operation that updates the charge bookkeeping of the coupled assemblies while conserving the global ε-inventory.
 
 - Z⁰ (neutral transfer):
   - Function: transports energy, momentum, and angular momentum with zero net charge.
-  - Charge: q_Z = 0.
+  - Charge: $q_Z = 0$.
   - Spin: effectively spin-1 for the same axial reasons.
   - Interpretation: a neutral corridor enabling re-phasing and mode exchange without charge movement.
 
@@ -36,11 +36,11 @@ Conservation: All transfers are implemented as reassignment of personality archi
 ## 3) Emission and Absorption (Geometric Rules)
 
 - Emission:
-  - Triggered by strongly accelerated, asymmetric internal motion near a polar region (e.g., binary mode transitions). A corridor nucleates where the delayed radial pushes add coherently along an axis and then either tethers to a nearby target or departs as a free bundle.
+  - Triggered by strongly accelerated, asymmetric internal motion near a polar region (e.g., binary mode transitions). A corridor nucleates from the superposition of constituent architrinos’ delayed radial pushes that add coherently along an axis and then either tethers to a nearby target or departs as a free bundle.
 - Absorption:
-  - Occurs when a corridor aligns with a compatible polar region; the phase-locked pattern is re-captured, yielding a discrete update of bound personality architrinos and internal mode energies.
+  - Occurs when a corridor aligns with a compatible polar region; the phase-locked pattern is re-captured via constituent architrino re-binding, yielding a discrete update of bound personality architrinos and internal mode energies.
 - Selection rules:
-  - Axial and chiral compatibility determine W vs Z channel availability and polarization. Right-hand-rule constructs do not appear; allowed/forbidden couplings follow from retardation geometry and the phase structure of the nested binaries.
+  - Axial and chiral compatibility determine W vs Z channel availability and polarization. Right-hand-rule constructs do not appear; allowed/forbidden couplings follow from path-history geometry and the phase structure of the nested binaries.
 
 Plain language: A sharp internal shove at a pole can launch a tube; if another pole of the right shape and timing is waiting, the tube docks and hands off charge or spin; if not, it decays in flight.
 
