--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -10,24 +10,24 @@ Let the Electrino be particle 1 and the Positrino be particle 2.
 -   **Positions:** $\mathbf{s}_1(t)$ and $\mathbf{s}_2(t)$
 -   **Charges:** $q_1 = -\epsilon$ and $q_2 = +\epsilon$
 
-The motion of each particle is determined by the field emitted by the other at a delayed time. The acceleration of the Electrino (particle 1) at time $t$ is caused by the Positrino's (particle 2) field emitted at a delayed time $t'$. This is governed by the interaction condition:
+The motion of each particle is determined by the field emitted by the other at a delayed time. The acceleration of the Electrino (particle 1) at time $t$ is caused by the Positrino's (particle 2) field emitted at an emission time $t_0$. This is governed by the interaction condition:
 $$
-\|\mathbf{s}_1(t) - \mathbf{s}_2(t')\| = v(t - t')
+\|\mathbf{s}_1(t) - \mathbf{s}_2(t_0)\| = v(t - t_0)
 $$
 The acceleration vector for the Electrino is attractive, pointing towards the Positrino's delayed position:
 $$
-\mathbf{a}_1(t) \propto -\hat{\mathbf{r}}_{2'1} = - \frac{\mathbf{s}_1(t) - \mathbf{s}_2(t')}{\|\mathbf{s}_1(t) - \mathbf{s}_2(t')\|}
+\mathbf{a}_1(t) \propto -\hat{\mathbf{r}}_{21} = - \frac{\mathbf{s}_1(t) - \mathbf{s}_2(t_0)}{\|\mathbf{s}_1(t) - \mathbf{s}_2(t_0)\|}
 $$
 A symmetric set of equations governs the Positrino's motion based on the Electrino's emissions.
 
 ### 2. The Inward Exponential Spiral
 
-In this system, a stable, circular orbit is impossible. Because the attractive force on each particle points to the *past* position of its partner, it is not a true central force. This delay results in a trajectory that is an **inward exponential spiral**.
+In the strictly sub-field-speed regime (no self-interaction, $|\mathbf{v}|\le v$), a stable, circular orbit is impossible. Because the attractive force on each particle points to the *past* position of its partner, it is not a true central force. This delay yields an **inward exponential spiral** that shrinks $r$ and increases speed until the self-interaction threshold ($|\mathbf{v}|>v$) is crossed.
 
 -   The tangential component of the delayed force sustains the orbital motion.
 -   The radial component continuously pulls the particles closer together.
 
-With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Consequently, according to the velocity-modulated emission rule, the effective charge $q_{eff}$ (per-wavefront amplitude) continuously decreases as speed rises. This does not alter the emission cadence: Architrinos emit at a constant rate; only the per-wavefront amplitude is modulated.
+With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Emission cadence and per-wavefront amplitude remain constant; the evolution is driven entirely by delay geometry and, once active, self-interaction.
 
 ### 3. Evolution Through Velocity Regimes
 
@@ -45,7 +45,7 @@ Once the particles' speeds exceed the field speed $v$, they cross the symmetry p
 $$
 \mathbf{a}_{1, \text{total}}(t) = \mathbf{a}_{1,2}(t) + \mathbf{a}_{1,1}(t)
 $$
-The new self-repulsive term, $\mathbf{a}_{1,1}(t)$, acts to increase the particle's velocity, causing the inward spiral to tighten and wind down even faster. This phase is "deflationary" as the self-interaction accelerates the collapse of the binary system.
+The new self-repulsive term, $\mathbf{a}_{1,1}(t)$, grows rapidly as the path curvature increases, causing the inward spiral to tighten while driving the system toward a curvature-limited minimum radius rather than a singular collapse. This phase is "deflationary" in that self-interaction accelerates the approach to the limiting circular state.
 
 ### 4. The Stable State and Emergent Properties
 
@@ -54,13 +54,15 @@ The deflationary spiral does not continue indefinitely. The self-repulsive force
 #### **Curvature Limit and Stability**
 The inward spiral does not lead to a singularity. The limiting factor is the geometry of self-interaction. As the spiral tightens, the path's curvature increases, bringing each Architrino closer to its own recent emission points. This proximity dramatically amplifies the self-repulsive force. The system reaches a critical state where any further decrease in orbital radius would cause an overwhelming increase in this self-repulsion, effectively creating a "pressure" that resists further collapse. The inward spiral is halted not by a simple balance of forces, but by this geometric feedback loop.
 
-At this limit, the trajectory stabilizes, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium where the inward pull from the partner is perfectly channeled into the circular motion, while the self-repulsive force prevents any further tightening of the path's curvature.
+At this limit, the trajectory stabilizes, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium where the inward pull from the partner is perfectly channeled into the circular motion, while the self-repulsive force prevents any further tightening of the path's curvature. Importantly, this minimum-radius circular state only exists once self-interaction is active ($|\mathbf{v}|>v$); in the strictly sub-field-speed regime ($|\mathbf{v}|\le v$) no stable circular orbit exists.
 
 #### **Emergent Properties**
 The stabilization of the orbiting binary gives rise to fundamental, emergent properties for the universe:
 -   **An Emergent Unit of Distance:** The radius of this stable orbit is a constant, determined by the fundamental parameters of the model (field speed $v$, charge $\epsilon$). It serves as the smallest possible orbital radius and thus becomes a natural, emergent unit of distance.
 -   **An Imposed Speed Limit:** While individual Architrinos have no inherent speed limit, the particles within this stable assembly are constrained to a specific, constant orbital speed. This creates a practical speed limit for particles bound within such structures.
--   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. In a sense, this axis acts as a "wormhole" through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
+-   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. This axis acts as a near-zero-potential corridor through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
+
+Validation note: Compare these claims against the standard numerical cross-checks (see 00.2.5 — Numerical Cross-Checks).
 
 ---
 
