--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -1,44 +1,41 @@
 # Perspective: Why This Model Maps So Well
 
-This framework appears to fit a surprising breadth of phenomena not because of any single novelty, but because a small set of simple, mutually reinforcing structural decisions is doing most of the heavy lifting. Two widely discussed choices—reduction to two true primitives (±ε Architrinos) and choosing ε=|e/6|—help with parsimony and charge bookkeeping, but the outsized wins come from how delayed, radial-only action, speed-based modulation, and a self-interaction threshold conspire to produce stability, scale selection, and emergent “magnetic-like” behavior without ever invoking right-hand-rule cross products.
+This framework appears to fit a surprising breadth of phenomena not because of any single novelty, but because a small set of simple, mutually reinforcing structural decisions is doing most of the heavy lifting. Two widely discussed choices—reduction to two true primitives (±ε Architrinos) and choosing ε=|e/6|—help with parsimony and charge bookkeeping, but the outsized wins come from how delayed, radial-only action and a self-interaction threshold conspire to produce stability, scale selection, and emergent “magnetic-like” behavior without ever invoking right-hand-rule cross products.
 
-We work throughout in units with field speed v=1; per-hit accelerations are purely radial along r̂ and superpose linearly.
+We work throughout in units with field speed $v=1$; per-hit accelerations are purely radial along $\hat{\mathbf{r}}$ and superpose linearly.
 
 ---
 
-## 1) Delayed spherical emission on 1/r² shells (no magnetism needed)
+## 1) Delayed spherical emission on $1/r^2$ shells (no magnetism needed)
 
 - What we assume:
-  - Sources emit potential on expanding spherical shells with surface density ∝1/r², represented distributionally by δ(r−τ) with τ=t−t0.
-  - Each causal hit is strictly radial: the acceleration contribution lies along r̂ from the retarded source point to the receiver.
+  - Sources emit potential on expanding spherical shells with surface density $\propto 1/r^2$, represented distributionally by $\delta(r-\tau)$ with $\tau = t - t_0$.
+  - Each causal hit is strictly radial: the acceleration contribution lies along $\hat{\mathbf{r}}$ from the source history point to the receiver.
 
 - Why it matters:
   - Gauss-like behavior falls out immediately (1/r² on wavefronts).
-  - Moving systems automatically generate tangential components in the receiver’s frame due solely to retardation geometry: the “aim point” is in the past, so the strictly radial force-at-emission is not central at reception. Orbital and vortex-like patterns emerge from delay, not from any B∝v×E construction.
+  - Moving systems automatically generate tangential components in the receiver’s frame due solely to path-history geometry: the “aim point” is in the past, so the strictly radial force-at-emission is not central at reception. Orbital and vortex-like patterns emerge from delay, not from any B∝v×E construction.
 
 - Consequence:
   - You can reproduce many “magnetic” phenomenologies (circulation, axial vortices, flux tubes) as kinematic consequences of delayed radial pushes. There is no right-hand rule, no cross products—just geometry and time delay.
 
 ---
 
-## 2) Velocity-modulated emission and reception: a built-in energy regulator
+## 2) Constant per-wavefront emission 
 
 - What we assume:
-  - Emission cadence is constant; the effective per-wavefront amplitude is q_eff(t0)=q/(1+|v_source(t0)|).
-  - Receiver response is likewise modulated by 1/(1+|v_receiver(t)|).
-  - Canonical per-hit law:
-    a_{o′←o} ∝ σ_{q_o q_{o′}} |q_o q_{o′}|/(r² (1+|v_o|)(1+|v_{o′}|)) r̂.
+  - Emission cadence and per-wavefront amplitude are constant.
 
 - Why it matters:
-  - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is the per-wavefront amplitude (q_eff) and the receiver’s response factor. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
-  - Energetics become tractable: with η-mollification (δ→δ_η), you can define Φ_η and verify ΔE_k=−ΔU on resolved intervals while still taking η→0 for sharp impulses.
+  - Simplifies calibration and emphasizes that stability and scale selection arise from delay and self-interaction. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
+  - With η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
 
 ---
 
-## 3) Self-interaction switch at |v|=v: the engine of stabilization and scales
+## 3) Self-interaction switch at $\lvert \mathbf{v}\rvert = v$: the engine of stabilization and scales
 
 - What we assume:
-  - When a worldline outruns its own recently emitted shells (|v|>1 in our units), the retarded roots include self-hits.
+  - When a worldline outruns its own recently emitted shells ($\lvert \mathbf{v}\rvert>1$ in our units), the causal roots include self-hits.
   - Self-hits are always repulsive (like-on-like).
 
 - Why it matters:
@@ -47,15 +44,15 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 
 ---
 
-## 4) Superposition with measure-valued shells and ε-regularization
+## 4) Superposition with measure-valued shells and η-regularization
 
 - What we assume:
   - All fields superpose linearly at the level of distributions (shells add).
-  - We use a narrow Gaussian shell δ_ε when continuous-time derivatives are needed.
+  - We use a narrow Gaussian shell $\delta_\eta$ when continuous-time derivatives are needed.
 
 - Why it matters:
-  - Locality: 1/r² weighting ensures near sources dominate; far sources cancel via multipole suppression.
-  - Bookkeeping: with δ_ε you can integrate numerically with standard ODE solvers; with δ you can reason about impulses and events. Both views agree in the ε→0 limit for integrals over resolved intervals.
+  - Locality: $1/r^2$ weighting ensures near sources dominate; far sources cancel via multipole suppression.
+  - Bookkeeping: with $\delta_\eta$ you can integrate numerically with standard ODE solvers; with $\delta$ you can reason about impulses and events. Both views agree in the $\eta\to 0$ limit for integrals over resolved intervals.
 
 ---
 
@@ -84,20 +81,20 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 ## Consequences that explain the “fit”
 
 - Stability without fine-tuned potentials:
-  - The |v|=1 switch plus velocity dimming sets operating points and prevents singular collapse.
+  - The |v|=1 switch and delay geometry set operating points and prevent singular collapse.
 - Scale emergence:
-  - d0 and t0 arise from dynamics; they are not postulated rulers and clocks but attractors of the binary system.
+  - $d_0$ and $t_0$ arise from dynamics; they are not postulated rulers and clocks but attractors of the binary system.
 - Shielding and apparent inertia:
   - Fast internal motion produces far-field cancellation; the tiny residual field of a coherent assembly behaves like inertial mass in interactions with the outside.
 - Magnetism without magnetism:
-  - Tangential effects and axial structures appear as a corollary of retardation + radial per-hit action. No cross products required.
+  - Tangential effects and axial structures appear as a corollary of path-history + radial per-hit action. No cross products required.
 
 ---
 
 ## What the model explicitly does not use
 
 - No Lorentzian spacetime metric at the fundamental level (background is absolute time + Euclidean space; emergent cones are effective, not kinematic).
-- No right-hand-rule magnetism or v×B forces; every per-hit action is along r̂.
+- No right-hand-rule magnetism or $\mathbf{v}\times\mathbf{B}$ forces; every per-hit action is along $\hat{\mathbf{r}}$.
 - No gauge field inventory beyond the Architrino fields; interaction carriers are the geometry of delayed shells and their couplings.
 
 ---
@@ -108,15 +105,15 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 - Compute the time-averaged multipole expansion of a high-frequency binary; show leading terms cancel along the rotation axis and decay rapidly off-axis.
 - Observable: a “quiet line” (near-zero net potential) threading the binary.
 
-2) Scale selection for d0 and t0
-- With δ→δ_ε, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines d0 and the maximum orbital frequency 2π/t0.
+2) Scale selection for $d_0$ and $t_0$
+- With $\delta\to\delta_\eta$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines $d_0$ and the maximum orbital frequency $2\pi/t_0$.
 - Prediction: the same d0 appears across binaries with the same ε and v, independent of initial conditions after sufficient relaxation.
 
 3) Energy consistency across the |v|=1 transition
-- Use Φ_ε to evaluate U and verify ΔE_k=−ΔU across events that cross the symmetry point; in the ε→0 limit, impulses integrate to the same work.
+- Use $\Phi_\eta$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\eta\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
-- For each receiver time t: (i) root-find retarded times t0 for all sources (and self), (ii) discard non-physical roots (H(0)=0, handle r=0 by symmetry), (iii) sum a_{o′←o}(t;t0) with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use ε-thickening for smooth integration when needed.
+- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
 
 ---
 
@@ -134,7 +131,105 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 ## Open questions (productive)
 
 - Exact analytic forms for d0 and t0 in the symmetric binary with the canonical modulation.
-- Rigorous conditions for uniqueness/multiplicity of retarded roots in accelerated motion and their contribution to stability.
+- Rigorous conditions for uniqueness/multiplicity of causal roots in accelerated motion and their contribution to stability.
 - Statistical mechanics of many-body sphere streams: when and how do coherent, Lorentz-like effective cones emerge, and with what characteristic speed relative to v?
 
-Plain language summary: Keep the hits radial, delay them in time, dim everything as it moves faster, and let fast movers run into their own wakes. From those four ideas, you get stable orbits, natural rulers and clocks, shielding that looks like inertia, and “magnetic-like” structures—all without any right-hand-rule magnetism.
+Plain language summary: Keep the hits radial, delay them in time, keep per-wavefront amplitude constant, and let fast movers run into their own wakes. From those four ideas, you get stable orbits, natural rulers and clocks, shielding that looks like inertia, and “magnetic-like” structures—all without any right-hand-rule magnetism.
+
+---
+
+## Effective observables and states (quantum-like layer)
+
+Premise: single-hit information is sparse. At an instant, a receiver learns only (i) the net magnitude of the push and (ii) an unoriented line of action through its current position. Even an absolute observer (perfect global clock and Euclidean frame) does not see the hidden emission ledger of all sources.
+
+- Emission ledger (microstate): the set of tuples {(t₀, s_j(t₀), v_j(t₀), q_j)} over all sources j that causally affect the receiver.
+- Observational map: ledgers → histories of hits {A(t_k), L(t_k)} across one or more receivers and over time.
+- Observational equivalence: two ledgers are equivalent if they induce indistinguishable hit histories at the chosen resolution (including mollifier width η, temporal sampling, and receiver geometry).
+
+Observability axioms:
+- A1 Single-hit observables are magnitude A and an unoriented line L; orientation along L, source identity, distance r, and emitter speed |v_em| are not individually observable at an instant.
+- A2 All practical observables are functionals of hit histories across time and receivers; unique micro inversion is generically impossible.
+- A3 An effective “state” is a probability measure over observationally equivalent ledger classes, updated as new hits arrive.
+
+Bayesian operational stance:
+- State update = conditioning on new hit histories; active interventions (changing receiver geometry/filters) alter future histories and thus the posterior over ledger classes.
+
+Plain language: you never see the full book of who emitted what; you only see a time series of shove sizes and lines. So the right language is statistical over micro-histories that fit those shoves.
+
+---
+
+## Absolute observer note: what perfect clocks and frames do (and don’t)
+
+Absolute time and Euclidean frames remove coordinate ambiguity (synchronization and alignment) but not physical ambiguity:
+- Sign/side ambiguity: attraction from +ε on one side vs repulsion from −ε on the opposite side along the same line remain indistinguishable at an instant.
+- Distance scaling only: A ∝ 1/r²; emitter speed affects timing of causal roots but not per-hit amplitude in the canonical law.
+- Collinear superposition: several sources along the same unoriented line can sum to the same instantaneous A and L.
+- Self-hit aliasing: self-intersections can mimic external sources along L.
+- Surrogate location recast: any instantaneous hit may be recast to a stationary surrogate source placed somewhere along L with an adjusted emission time; useful for inference and visualization, but it does not resolve the sign/side ambiguity or fix distance without temporal data.
+
+Consequence: even the absolute observer must reason statistically over ledger classes; “quantum-like” observability is not a contradiction but a necessity.
+
+---
+
+## Single-source multi-hit nuance vs universal superposition
+
+Even for a single source, the receiver cannot be sure that a given shove did not come from multiple distinct emission times $t_0 \in \mathcal{C}_j(t)$ on that same source. When $\lVert \mathbf{v}_j \rVert > 1$ or the source trajectory curves, several roots of $r = v(t - t_0)$ can occur and arrive in close succession along the same unoriented line of action, contributing separate per-hit pushes that are locally indistinguishable as to origin.
+
+However, this is not the dominant practical difficulty. The governing issue is global superposition: at any instant the net field is the linear sum of contributions from all Architrinos in the universe whose shells intersect the receiver “now.” While $1/r^2$ weighting makes nearby sources dominate, the mapping from the universal emission ledger to observed hit histories remains vastly many-to-one. Consequently, inference must be temporal, statistical, and multi-view, not a frame-perfect instantaneous inversion.
+
+---
+
+## Operational noncommutativity and contextuality (emergent)
+
+Measurement procedures are interventions that condition future hit histories:
+- Let F, G be experimental contexts (e.g., corridor analyzers, path blockers, timing gates). Because they modify trajectories and thus the set of future causal roots, their composition generally satisfies F∘G ≠ G∘F at the level of observed statistics.
+- Contextuality: the distribution over ledger classes that best explains data depends on which filters were applied and in what order; the outcomes are context-dependent without invoking microscopic cross-product forces.
+
+Plain language: changing what you do now changes which shoves you’ll see later; doing A then B is not the same as B then A.
+
+---
+
+## Interference and amplitude-squared from corridor overlap
+
+Linear superposition at the shell level plus coherent geometry yields interference-like patterns in aggregates:
+- Corridor fields from multiple sources add linearly; a detector that integrates over a small time window and area effectively accumulates a complex amplitude A_corr from coherent sub-bundles.
+- Intensity emerges as an overlap norm ∝ |A_corr|² under time/ensemble averaging of phase-like structure encoded by path histories.
+- Polarization example (already used): Malus’s law arises as a geometric projection of a corridor’s transverse pattern onto an analyzer axis, giving cos²θ transmission without right-hand-rule magnetism.
+
+Plain language: aligned corridors add, misaligned ones cancel; the strength you record scales like the square of how well patterns line up.
+
+---
+
+## Reconstruction and inference: practical recipe under information bounds
+
+Instantaneous inversion is ill-posed; reconstruction is temporal, multi-view, and prior-guided:
+- Multi-receiver geometry: use separated receivers to triangulate unoriented lines at the same t; intersecting rays yield two-sided candidate loci.
+- Time-series constraints: track L(t) and timing-derived r(t) proxies; curvature and rotation of L constrain source paths.
+- Active probing: vary receiver motion/filters to sample different roots and break degeneracies.
+- Priors: charge inventories, speed bounds, assembly templates (e.g., binaries, corridor statistics) shrink the hypothesis space.
+- Estimation: run Bayesian filters or particle sets over ledger classes; update with each hit; report identifiability and uncertainty, not single-point “sources.”
+
+---
+
+## Worked micro-to-effective examples
+
+- Two-corridor interference:
+  - Setup: two coherent axial corridors reach a screen. The observed intensity pattern is the squared norm of their geometric overlap along the screen, set by relative phase encoded in path history.
+  - Which-way intervention: inserting a context that disrupts one corridor’s coherence changes the ledger classes and removes the overlap term, flattening the pattern.
+
+- Polarization analyzer:
+  - The analyzer projects the corridor’s transverse structure onto its axis; transmission ∝ cos²θ follows immediately from geometric projection.
+
+- Sequential filters (order matters):
+  - Two non-parallel analyzers F(θ₁) and G(θ₂) applied in different orders yield different transmitted patterns because they recondition future causal roots differently: F∘G ≠ G∘F.
+
+---
+
+## Falsifiable edges and tests (observability-focused)
+
+- Context order test: demonstrate order-dependent transmission with sequential analyzers on coherent corridors; quantify the asymmetry F∘G vs G∘F.
+- Corridor interference robustness: map how partial decoherence (deliberate jitter in source paths) suppresses the overlap term; compare to predicted |A|² decay with coherence length.
+- Multi-receiver triangulation under ambiguity: show that two-sided localization from unoriented lines plus time series reduces, but does not eliminate, sign/side and distance–speed degeneracies—matching Step 9 limits.
+- Bell-type correlation target (open): assess whether corridor-phase models with absolute time can reproduce observed cos(2θ) correlations across separated analyzers without hidden cross-product forces; treat Tsirelson-like bounds as a stringent benchmark.
+
+Plain language: we can test the framework by checking order effects, interference weakening when we scramble coherence, and how much multiple receivers really help; reproducing quantum correlations is the toughest, and we flag it as an explicit target.
