--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
@@ -82,4 +82,8 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 
 It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own spherical shells emitted earlier in its path history. This is somewhat analogous to a speedboat passing its own wake, and later curving or stopping such that its past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $\mathcal{C}_a(t)$ along worldlines (see Action and Interaction).
 
+### Global neutrality (working hypothesis)
+
+At cosmological scales we assume the total Architrino charge inventory sums to zero (equal counts of $+\epsilon$ and $-\epsilon$). This serves as a boundary condition in continuum arguments and avoids unphysical large-scale divergences. Local subsystems can be non-neutral; neutrality is imposed only as a global working hypothesis.
+
 
