--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -146,6 +146,12 @@ Premise: single-hit information is sparse. At an instant, a receiver learns only
 - Observational map: ledgers → histories of hits {A(t_k), L(t_k)} across one or more receivers and over time.
 - Observational equivalence: two ledgers are equivalent if they induce indistinguishable hit histories at the chosen resolution (including mollifier width η, temporal sampling, and receiver geometry).
 
+- Coarse-grained PDE observables (Method 1):
+  - Number density $n(\mathbf{x}, t)$: count-per-volume of Architrinos.
+  - Charge density $\rho(\mathbf{x}, t)$: net $+\epsilon-\epsilon$ per unit volume; natural source term in continuum PDE variants.
+  - Energy density $\mathcal{E}(\mathbf{x}, t)$: local kinetic + potential energy density for validation and conservation checks.
+  - Use: these fields are the natural inputs/targets for grid-based PDE runs and for validating event-driven simulations in aggregate.
+
 Observability axioms:
 - A1 Single-hit observables are magnitude A and an unoriented line L; orientation along L, source identity, distance r, and emitter speed |v_em| are not individually observable at an instant.
 - A2 All practical observables are functionals of hit histories across time and receivers; unique micro inversion is generically impossible.
