--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
@@ -73,6 +73,8 @@ Geodesics and dynamics: The background is flat and non-dynamical; free motion fo
 
 This section details more advanced concepts regarding the Architrino's motion and its field generation.
 
+There is no kinematic cap on $|\mathbf{v}_a|$; emergent assemblies impose operational limits.
+
 #### **Velocity Regimes and Local Field Interaction**
 The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed $v$ defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The spherical shell it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
 
