--- a/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
@@ -8,11 +8,9 @@ When chemists talk about the **van der Waals (VdW) volume** of a molecule, they 
 | ----------- | ------- | --------------- |
 | Hydrogen    | H₂      | 25              |
 | Helium      | He      | 27              |
+| Nitrogen    | N₂      | 34              |
 | Water       | H₂O     | 55              |
-| Methane     | CH₄     | 71              |
-| Ethanol     | C₂H₅OH  | 118             |
-| Benzene     | C₆H₆    | 146             |
-| Naphthalene | C₁₀H₈   | 262             |
+
 
 *(1 Å³ = 10⁻²⁴ cm³)*
 
