--- a/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
@@ -14,6 +14,20 @@ When chemists talk about the **van der Waals (VdW) volume** of a molecule, they 
 
 *(1 Å³ = 10⁻²⁴ cm³)*
 
+### How much volume do gas molecules actually occupy in air?
+
+At everyday conditions (≈1 atm, room temperature), air is extremely sparse. A quick estimate using van der Waals volumes shows why:
+
+- Take nitrogen (N₂) as representative with VdW volume ≈ 34 Å³ per molecule. One mole then “hard-core” occupies about 34 × 10⁻²⁴ cm³ × N_A ≈ 20 cm³.
+- One mole of an ideal gas occupies ≈ 24,000 cm³ at 298 K and 1 atm.
+- Packing fraction ≈ 20 cm³ / 24,000 cm³ ≈ 0.08–0.1%.
+
+Intuition scales:
+- Average intermolecular spacing ≈ 3–4 nm.
+- Mean free path in air ≈ 60–70 nm.
+
+Conclusion: gas molecules “consume” well under one-tenth of a percent of the available volume; most of the space is empty compared to liquids/solids.
+
 This gives a **geometric baseline** for how much space a molecule excludes. But in real matter, things are more flexible.
 
 ---
@@ -59,6 +73,11 @@ Think of maximally packed van der Waals volumes as a **molecular fortress**. Ord
 * **Spacetime itself**: Not excluded. Matter curves spacetime, but doesn’t block it. (mathematical, non-physical interpretation)
 
 ---
+
+## Background timespace vs implemented medium (theory perspective)
+
+- Background: the mathematical arena in this project is absolute timespace (one global time × Euclidean 3-space). It is fixed, non-dynamical, and does not curve.
+- Implemented “spacetime”: the effective medium that carries corridors and supports propagation is realized by coherent Architrino assemblies at scales far smaller than molecules (a spacetime-æther layer in the implementation sense, not a separate field inventory). Their microstructure can modulate effective propagation, boundaries, and coherence without altering the background kinematics.
 
 ## Big Picture
 
