--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
@@ -20,6 +20,7 @@ We synthesize Steps 1–10 and the canonical Action to compare—side by side—
 * Each emitted shell carries a **strength** $Q$ (I’ll call that “shell amplitude” — the physical meaning depends on your application: charge, potential impulse, energy, etc.).
 * Continuous source (preferred): model the emitter as a moving point injection with time-density $q(t)$ (amplitude per unit time) at its instantaneous position, i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$. Each instant $t_0$ contributes a spherical shell; we do not count “shells per second” (pulse trains are merely numerical surrogates).
 * We want to know the field $\phi(\mathbf{x},t)$ (I’ll call the scalar field “potential” or simply $\phi$) produced at any point $\mathbf{x}$ and time $t$.
+* Global neutrality (working hypothesis): on large scales the total Architrino charge inventory sums to zero (equal counts of $\pm\epsilon$); use this as the default boundary condition in PDE/Green’s-function comparisons.
 
 We compare three frameworks: (1) a time-domain PDE/source, (2) an integral/Green’s-function (path history) solution, and (3) an event-driven radial-transport plus per-hit EOM. For each, we define symbols, show how the expanding shells appear, discuss how slowing or stopping the emitter is handled, and weigh trade-offs to inform a recommendation.
 
@@ -228,7 +229,7 @@ Plain language: Treat the field as razor-thin “paint” spread over a growing 
 ## Cross-method guidance: when to use which method, a unifying example, and practical tips
 
 When to use which method (quick pick)
-- Method 1 (PDE): whole-field grid simulations, visualization, and complex media/boundaries. Deposit a smeared source each step; robust when an emitter slows or stops.
+- Method 1 (PDE): whole-field grid simulations, visualization, and complex media/boundaries. Deposit a smeared source each step; robust when an emitter slows or stops. Aggregate particle data to coarse-grained densities n(x,t), ρ(x,t), and ℰ(x,t) as inputs/targets for PDE runs and validation.
 - Method 2 (Green’s function / path-history integral): closed forms and sparse probe evaluation. Enforce the path-history condition $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and handle the geometric factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ during evaluation; root-solve one (or more) $\tau$ per (observer, time) pair.
 - Method 3 (Event-driven canonical): production many-body dynamics. Find causal roots and sum per-hit $1/r^2$ pushes; prefer $\eta$-mollified mode for smooth ODEs when needed.
 
