--- a/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
@@ -1,5 +1,3 @@
-
-
 # Visualizing Volumes and Exclusion in the Universe
 
 When chemists talk about the **van der Waals (VdW) volume** of a molecule, they mean the space excluded by its electron cloud — the “hard sphere” a molecule presents to its neighbors. This is estimated from atomic van der Waals radii (Bondi, 1964) and corrected for bond overlaps. For example:
@@ -8,13 +6,45 @@ When chemists talk about the **van der Waals (VdW) volume** of a molecule, they 
 | ----------- | ------- | --------------- |
 | Hydrogen    | H₂      | 25              |
 | Helium      | He      | 27              |
+| Nitrogen    | N₂      | 34              |
 | Water       | H₂O     | 55              |
-| Methane     | CH₄     | 71              |
-| Ethanol     | C₂H₅OH  | 118             |
-| Benzene     | C₆H₆    | 146             |
-| Naphthalene | C₁₀H₈   | 262             |
 
 *(1 Å³ = 10⁻²⁴ cm³)*
+
+### How much volume do gas molecules actually occupy in air?
+
+At everyday conditions (≈1 atm, room temperature), air is extremely sparse. A quick estimate using van der Waals volumes shows why:
+
+- Take nitrogen (N₂) as representative with VdW volume ≈ 34 Å³ per molecule. One mole then “hard-core” occupies about 34 × 10⁻²⁴ cm³ × N_A ≈ 20 cm³.
+- One mole of an ideal gas occupies ≈ 24,000 cm³ at 298 K and 1 atm.
+- Packing fraction ≈ 20 cm³ / 24,000 cm³ ≈ 0.08–0.1%.
+
+Intuition scales:
+- Average intermolecular spacing ≈ 3–4 nm.
+- Mean free path in air ≈ 60–70 nm.
+
+Conclusion: gas molecules “consume” well under one-tenth of a percent of the available volume; most of the space is empty compared to liquids/solids.
+
+### Number densities in air (molecules per cm³, dry air at 1 atm and 25°C)
+
+Using the ideal gas law, dry air at 1 atm and 298 K contains ≈ 2.46 × 10^19 molecules per cm³. Multiplying by typical volume fractions gives:
+- Nitrogen (N₂, 78.084%): ≈ 1.92 × 10^19 per cm³
+- Oxygen (O₂, 20.946%): ≈ 5.16 × 10^18 per cm³
+- Argon (Ar, 0.934%): ≈ 2.30 × 10^17 per cm³
+- Carbon dioxide (CO₂, ~420 ppm): ≈ 1.03 × 10^16 per cm³
+- Neon (Ne, 18.2 ppm): ≈ 4.5 × 10^14 per cm³
+- Helium (He, 5.24 ppm): ≈ 1.29 × 10^14 per cm³
+- Methane (CH₄, ~1.9 ppm): ≈ 4.7 × 10^13 per cm³
+- Krypton (Kr, 1.14 ppm): ≈ 2.8 × 10^13 per cm³
+- Hydrogen (H₂, 0.55 ppm): ≈ 1.35 × 10^13 per cm³
+- Nitrous oxide (N₂O, ~0.336 ppm): ≈ 8.3 × 10^12 per cm³
+- Xenon (Xe, 0.087 ppm): ≈ 2.1 × 10^12 per cm³
+- Ozone (O₃, variable; e.g., 30 ppb): ≈ 7.4 × 10^11 per cm³
+
+Notes:
+- “Dry air” omits water vapor. At 25°C and 50% RH, H₂O is ~1.6% by volume (≈ 3.9 × 10^17 per cm³), reducing the dry-air constituents by the same fraction. At 100% RH (25°C), H₂O is ~3.1% (≈ 7.7 × 10^17 per cm³).
+- At STP (0°C, 1 atm), total density ≈ 2.69 × 10^19 per cm³; scale species accordingly.
+- Despite these high number densities, the “hard-core” geometric occupancy is only ~0.08–0.1% of the volume (see VdW estimate above): the vast majority of air’s volume is spacetime assemblies compared to molecular gases/liquids/solids.
 
 This gives a **geometric baseline** for how much space a molecule excludes. But in real matter, things are more flexible.
 
@@ -51,7 +81,6 @@ Think of maximally packed van der Waals volumes as a **molecular fortress**. Ord
 
 * **Ordinary matter (atoms, electrons)**: Blocked. They *are* the walls.
 * **Photons**: Sometimes pass, sometimes absorbed.
-
   * Visible light moves through water and glass, but not metal.
   * X-rays probe deep into flesh but are stopped by bone.
   * Gamma rays cut through meters of concrete.
@@ -61,6 +90,11 @@ Think of maximally packed van der Waals volumes as a **molecular fortress**. Ord
 * **Spacetime itself**: Not excluded. Matter curves spacetime, but doesn’t block it. (mathematical, non-physical interpretation)
 
 ---
+
+## Background timespace vs implemented medium (theory perspective)
+
+- Background: the mathematical arena in this project is absolute timespace (one global time × Euclidean 3-space). It is fixed, non-dynamical, and does not curve.
+- Implemented “spacetime”: the effective medium that carries corridors and supports propagation is realized by coherent Architrino assemblies at scales far smaller than molecules (a spacetime-æther layer in the implementation sense, not a separate field inventory). Their microstructure can modulate effective propagation, boundaries, and coherence without altering the background kinematics.
 
 ## Big Picture
 
@@ -72,4 +106,3 @@ In other words, the van der Waals volume is a “no-go zone” only for **ordina
 
 ---
 
-Would you like me to sketch a **layered diagram** — showing molecules as hard shells, then overlaying which particles (photons, neutrinos, dark matter, etc.) can penetrate each layer — so readers can literally *see* what’s excluded and what isn’t?
